--- a/index.html
+++ b/index.html
@@ -664,16 +664,16 @@
                         <!--                        sub menu-->
                         <div class="sub-menu">
                             <ul>
-                                <li class="has-dropdown">
-                                    <a href="#">Super Star Electrical Accessories Limited
+                                <li class="has-sub-dropdown">
+                                    <a href="#">jut
                                     </a>
                                     <div class="sub-dropdown-menu">
                                         <ul>
-                                            <li><a href="#">Super Star Electronics Limited
+                                            <li><a href="#">jut1
                                             </a></li>
-                                            <li><a href="#">Super Star Fan Limited
+                                            <li><a href="#">jut2
                                             </a></li>
-                                            <li><a href="#">IR Bulb Co Limited
+                                            <li><a href="#">jut3
                                             </a></li>
                                         </ul>
                                     </div>
@@ -755,6 +755,26 @@
                         <li><a href="javascript:void(0)"><span>Sub two</span></a></li>
                         <li><a href="javascript:void(0)"><span>Sub three</span></a></li>
                         <li><a href="javascript:void(0)"><span>Sub four</span></a></li>
+                    </ul>
+                </li>
+                <li class="has-dropdown">
+                    <a href="javascript:void(0)">
+                        <span>Product</span>
+                    </a>
+                    <!--                        sub menu-->
+                    <ul class="sub-menu">
+                        <li class="has-sub-dropdown">
+                            <a href="#">jut
+                            </a>
+                            <ul class="sub-dropdown-menu">
+                                <li><a href="#">jut1
+                                </a></li>
+                                <li><a href="#">jut2
+                                </a></li>
+                                <li><a href="#">jut3
+                                </a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li class="has-dropdown">
